--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -2,5 +2,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 60px 0;
+  align-items: center;
+  margin: 30px;
+  min-height: 83vh;
+}
+
+@media screen and (max-width: 500px) {
+  .container-card {
+    margin: 30px 0;
+  }
 }
